fixed bold/strong text not showing as very bold, fixed side nav background on pages without much content

--- a/_static/assets/theme-white/style.css
+++ b/_static/assets/theme-white/style.css
@@ -7,7 +7,7 @@ Instead, edit the stylus (.styl) files and compile it to CSS on your machine.
 /* ----------------------------------------------------------------------------
  * Fonts
  */
-@import url("//fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro|Source+Code+Pro|Montserrat:700|Open+Sans:300|Dosis:400,300");
+@import url("//fonts.googleapis.com/css?family=Roboto:400,700|Source+Sans+Pro|Source+Code+Pro|Montserrat:700|Open+Sans:300|Dosis:400,300");
 /* ----------------------------------------------------------------------------
  * Base
  */
@@ -800,6 +800,7 @@ a.big.button:hover:visited {
     top: 0;
     bottom: 0;
     width: 270px;
+    min-height: 1024px;
     border-right: solid 1px #dfe2e7;
   }
   .menubar.fixed {
